frontend/src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=TASA+Explorer:wght@400..800&display=swap');
@import 'tailwindcss';

@theme {
  --font-display: 'DM Sans', sans-serif;
}

:root {
  --default-font-family: 'TASA Explorer', 'sans-serif';
  --default-font-color: #1f1f1f;
  --default-container: 86rem;
  --primary: #5a81fa;
  --secondary: #2b308a;
  --primary-light: #cedeff;
  --border-color: #696e82;
}

@layer base {
  :host {
    overflow: auto;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  :host::-webkit-scrollbar {
    display: none;
  }
}

@layer utilities {
  /* Hide scrollbar for Chrome, Safari and Opera */
  .no-scrollbar::-webkit-scrollbar {
    display: none;
  }

  /* Hide scrollbar for IE, Edge and Firefox */
  .no-scrollbar {
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
  }
}

html,
body {
  font-family: var(--default-font-family), sans-serif;
  font-optical-sizing: auto;
  font-weight: 200;
  font-style: normal;
  color: var(--default-font-color);
  @apply bg-neutral-50;
}

app-root {
  @apply h-full min-h-screen block;
}

body {
  overscroll-behavior-y: contain;
}

b,
strong,
h1,
h2,
h3,
h4,
h5,
h6 {
  @apply font-semibold tracking-tight;
}

h1 {
  @apply text-4xl;
}

h2 {
  @apply text-3xl;
}

h3 {
  @apply text-2xl;
}

h4 {
  @apply text-xl;
}

h5 {
  @apply text-lg;
}

h6 {
  @apply text-base;
}

hr {
  @apply border-t border-(--border-color);
}

.enter-animation {
  animation: slide-fade 300ms forwards;
  opacity: 0;
  transform: translateY(20px);
}

@keyframes slide-fade {
  from {
    opacity: 0;
    transform: translateY(20px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type='number'] {
  -moz-appearance: textfield;
}

svg.icon {
  @apply size-6 stroke-2;
}

@layer components {
  .bg-blur {
    @apply bg-white/90 backdrop-blur-sm;
  }

  .btn {
    @apply rounded-lg py-2 px-4 text-white font-semibold text-center transition-colors cursor-pointer min-h-11.5;

    &:disabled {
      @apply opacity-75 cursor-not-allowed pointer-events-none;
    }

    &.btn-primary {
      background-color: var(--primary);

      &:hover:not(:disabled) {
        background-color: var(--secondary);
      }
    }

    &.btn-primary-outline {
      @apply text-(--primary) border border-(--primary) bg-white;

      &:hover,
      &.active {
        @apply text-white border border-(--secondary) bg-(--secondary);
      }
    }

    &.btn-icon {
      @apply py-2 px-3;

      i {
        @apply text-2xl;
      }
    }
  }

  .form-control,
  .form-select {
    @apply border border-(--border-color) rounded-lg py-2.5 px-4 bg-white block w-full min-h-11.5;

    &.disabled {
      @apply bg-gray-100 cursor-not-allowed pointer-events-none;
    }

    &.error {
      @apply border-(--primary-lighter) bg-red-50;
    }
  }

  .form-switch {
    @apply h-6
    w-11
    rounded-full
    border
    border-(--primary-light)
    bg-red-300
    after:absolute
    after:left-0.5
    after:top-0.5
    after:h-5
    after:w-5
    after:rounded-full
    after:border
    after:border-rose-300
    after:bg-white
    after:transition-all
    after:content-['']
    peer-checked:bg-(--primary-light)
    peer-checked:after:translate-x-full
    peer-checked:after:border-white;

    &.disabled {
      @apply cursor-not-allowed
      border-rose-200
      bg-red-200;
    }
  }

  .form-label {
    @apply font-medium ps-2 m-0;
  }

  .card {
    @apply bg-white/90 backdrop-blur-sm rounded-3xl shadow-md p-5;
  }

  .container {
    @apply max-w-(--default-container) mx-auto grid grid-cols-12 gap-6 px-4;
  }

  .markdown-body {
    h1 {
      @apply text-xl font-semibold tracking-tight;
    }

    h2 {
      @apply text-lg font-semibold tracking-tight;
    }

    h3 {
      @apply text-base font-semibold tracking-tight;
    }

    ul,
    ol {
      @apply max-w-md space-y-1 text-base list-inside marker:text-(--secondary) marker:m-0;

      li {
        @apply p-2 ms-0;
      }
    }

    ul {
      @apply list-disc;
    }

    ol {
      @apply list-decimal marker:font-semibold;
    }

    p {
      @apply text-base leading-5;
    }

    a {
      @apply text-base text-(--primary);
    }

    blockquote {
      @apply max-w-md px-4 py-2 border-l-4 border-(--primary) italic;
    }
  }

  .list {
    @apply text-base list-outside marker:text-(--secondary) marker:m-0 list-disc ms-6;

    li {
      @apply ms-0;
    }
  }

  .link {
    @apply text-(--primary) hover:text-(--secondary);
  }
}

